force-app/main/default/objects/OpportunityLineItem/fields/cafsl__External_Id__c.field-meta.xml
<CustomField>
    <fullName>cafsl__External_Id__c</fullName>
    <label>External Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>