force-app/main/default/objects/OpportunityLineItem/fields/SVMXA360__AssetId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Asset related to this Opportunity Product Record</description>
    <inlineHelpText>The Asset related to this Opportunity Product Record</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>