force-app/main/default/objects/OpportunityLineItem/fields/SVMXA360__ProductServiceCampaignItemId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductServiceCampaignItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Service Campaign Item Line related to the Opportunity Product record.</description>
    <inlineHelpText>The Product Service Campaign Item Line related to the Opportunity Product record.</inlineHelpText>
    <label>Product Service Campaign Item</label>
    <referenceTo>ProductServiceCampaignItem</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>